<resources>
    <string name="app_name">Notifie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Message</string>
    <string name="action_call">Call</string>
    <string name="delete_all">Delete All</string>
    <string name="compose_message">Reply</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="already_registered">Already Registered?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="notifie_slogan">Better way to communicate</string>
    <string name="login">Log In</string>
    <string name="filter">Filter messages</string>
    <string name="favorites_empty_title">Oops! Empty</string>
    <string name="favorites_empty_sub_title">Hearts is for favorites. Store here important converstations</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="title_activity_upload_photo">UploadPhotoActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="facebook_app_id">1432645900347134</string>
    <string name="title_activity_display_client">DisplayClientActivity</string>
    <string name="client_feed">Feed</string>
    <string name="channel_ask">Ask channel</string>
    <string name="all_messages_filter">All messages</string>
    <string name="new_messages_filter">New messages</string>
    <string name="new_comments_filter">Messages with new comments</string>
    <string name="favorites_filter">Favorite messages</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="message_in_settings_header">List of connected channels. You can switch any into do not disturb mode</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">Sign In</string>
    <string name="terms_of_serivice">Terms Of Service</string>
    <string name="privacy">Privacy</string>
    <string name="sign_up_accept">Siging up you are accept our terms of service and privacy</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_phone">Phone format +7 900 900-00-00</string>
    <string name="sign_up_phone_hint">Phone</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_password">Password length is minimum 6 chart</string>
    <string name="title_activity_ask">Compose</string>
    <string name="select_channel">Select Channel</string>
    <string name="selected_channel">Selected Channel</string>
    <string name="select_subject">Select Subject</string>
    <string name="selected_subject">Selected Subject</string>
    <string name="client_feed_header">Favorite Channels</string>
    <string name="send_request">SEND</string>
    <string name="send_request_helper">If channel support template request to it\'s data you can select channel and subject for automatic request any data</string>
    <string name="cant_be_blank">Can\'t be blank</string>
    <string name="is_invalid">Is invalid</string>
    <string name="is_too_short_minimum_is_6_characters">Is too short (minimum is 6 characters)</string>
    <string name="has_already_been_taken">Has already been taken</string>
    <string name="take_photo">Take photo</string>
    <string name="take_photo_from_facebook">Take photo from Facebook</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="favotite_message">Favorite</string>
    <string name="sign_in_password">Password</string>
    <string name="feed_empty_title">Oops!</string>
    <string name="feed_empty_sub_title">No data found! Check your filters</string>
    <string name="almost_done">Almost Done. We are suggest upload your photo to make conversation more personal</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="enter_confirmation_code">Enter confirmation code texted you</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_subtitle">Keep calm and wait for code. Sometimes delay may be about one minute</string>
    <string name="resend_code">Resend Code</string>
    <string name="upload_photo">Upload Photo</string>


</resources>
