<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/actionbar_background_alpha05"
    tools:context="co.notifie.app.AskActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            app:ms_multiline="false"
            app:ms_hint="@string/select_channel"
            app:ms_floatingLabelText="@string/selected_channel"
            app:ms_baseColor="@color/actionbar_background"
            app:ms_highlightColor="@color/black_alpha50"
            app:ms_errorColor="@color/actionbar_background"
            app:ms_thickness="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/template_spinner"
            app:ms_multiline="false"
            app:ms_hint="@string/select_subject"
            app:ms_floatingLabelText="@string/selected_subject"
            app:ms_baseColor="@color/actionbar_background"
            app:ms_highlightColor="@color/black_alpha50"
            app:ms_errorColor="@color/actionbar_background"
            app:ms_thickness="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:textColor="@color/gray"
            android:textSize="12dp"
            android:text="@string/send_request_helper"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/send_request"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="9dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="9dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            fancy:borderColor="@color/actionbar_background"
            fancy:borderWidth="1dp"
            fancy:defaultColor="@color/clear"
            fancy:focusColor="@color/black_alpha10"
            fancy:iconPosition="left"
            fancy:radius="2dp"
            fancy:text="@string/send_request"
            fancy:textColor="@color/actionbar_background" />

     </LinearLayout>


</RelativeLayout>
