<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="35dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="co.notifie.app.SignUpActivity">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content" android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                app:met_primaryColor="@color/white"
                app:met_floatingLabelText="@string/sign_up_email"
                app:met_errorColor="@color/error_color"
                android:hint="@string/sign_up_email_hint"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="phone"
                app:met_primaryColor="@color/white"
                app:met_floatingLabelText="@string/sign_up_phone"
                app:met_errorColor="@color/error_color"
                android:hint="@string/sign_up_phone_hint"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPassword"
                app:met_primaryColor="@color/white"
                app:met_floatingLabelText="@string/sign_up_password"
                app:met_errorColor="@color/error_color"
                android:hint="@string/sign_up_password_hint"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                >

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/sign_up_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="9dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="9dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    fancy:borderColor="#FFFFFF"
                    fancy:borderWidth="1dp"
                    fancy:defaultColor="@color/clear"
                    fancy:focusColor="@color/black_alpha10"
                    fancy:iconPosition="left"
                    fancy:radius="2dp"
                    fancy:text="@string/sign_up"
                    fancy:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:gravity="left"
                    android:paddingTop="8dp"
                    android:paddingBottom="3dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/login_text_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_accept"
                        android:textColor="@color/white_alpha80"
                        android:textStyle="normal"
                        android:textSize="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:gravity="left"
                    android:layout_height="wrap_content">

                    <Button android:id="@+id/terms"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/terms_of_serivice"
                        style="?android:attr/borderlessButtonStyle"
                        android:textSize="10dp"
                        android:minHeight="10dp"
                        android:padding="0dp"
                        android:textColor="@color/white"
                        android:textStyle="normal" />


                    <Button android:id="@+id/privacy"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/privacy"
                        style="?android:attr/borderlessButtonStyle"
                        android:textSize="10dp"
                        android:gravity="left"
                        android:layout_marginLeft="5dp"
                        android:padding="0dp"
                        android:minHeight="10dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/white"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</RelativeLayout>
