<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/abc_action_bar_progress_bar_size"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.notifie.app.ConfirmationActivity">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_confirmation_code"
                android:gravity="center"
                android:textColor="@color/white_alpha80"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/confirmation_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/white"
                    app:met_floatingLabel="normal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number"
                    app:met_primaryColor="@color/white_alpha50"
                    app:met_floatingLabelText="@string/confirm_code"
                    app:met_errorColor="@color/error_color"
                    android:hint="@string/confirm_code"/>

                <!--
                <EditText android:id="@+id/confirmation_code" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="CODE"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:textColorHint="@color/white_alpha10"
                    android:backgroundTint="@color/white_alpha80"
                    android:maxLines="1" android:singleLine="true" />
                -->

            </LinearLayout>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/confirmation_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="9dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="9dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                fancy:borderColor="#FFFFFF"
                fancy:borderWidth="1dp"
                fancy:defaultColor="@color/clear"
                fancy:focusColor="@color/black_alpha10"
                fancy:iconPosition="left"
                fancy:radius="2dp"
                fancy:text="@string/confirm"
                fancy:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/login_text_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_subtitle"
                        android:textColor="@color/white_alpha80"
                        android:textStyle="normal"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <Button android:id="@+id/resend_code"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/resend_code"
                        style="?android:attr/borderlessButtonStyle"
                        android:textSize="12dp"
                        android:minHeight="12dp"
                        android:textColor="@color/white"
                        android:textStyle="normal" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
